<resources>
    <string name="app_name">COVID-19 vakcinacija</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Prijavi se</string>
    <string name="canceled">We are sorry. You cannot apply for vaccination because of the barriers you possess.</string>
    <string name="next">Dalje</string>
    <string name="about">About</string>
    <string name="about_text">This app allows easy registration for immunization againist COVID-19 virus.</string>
    <string name="priority_title">Pripadanje prioritetnoj grupi</string>
    <string name="vaccine_selection">Izbor vakcine</string>
    <string name="share_text">Uspješna prijava za vakcinaciju. Osoba %1$s %2$s %3$s. godine, telefon: %4$s, email: %5$s, prioritet: %6$s, izbor vakcine: %7$s . </string>
    <string name="share">Share</string>
    <string name="first_last_name_text">%1$s %2$s</string>
    <string name="prijava_za_vakcinaciju">Prijava za vakcinaciju</string>
    <string name="korisnik_radnik_stara_kog_doma">Korisnik/radnik staračkog doma</string>
    <string name="medicinski_radnik">Medicinski radnik</string>
    <string name="hroni_ni_bolesnik">Hronični bolesnik</string>
    <string name="ne_pripadam">Ne pripadam</string>
    <string name="podaci_o_osobi">Podaci o osobi</string>
    <string name="title_image">title_image</string>
    <string name="ime">Ime</string>
    <string name="email">Email</string>
    <string name="prezime">Prezime</string>
    <string name="godine">Godine</string>
    <string name="telefon">Telefon</string>
    <string name="podaci_o_korisniku">Podaci o korisniku</string>
    <string name="izbor_vakcine">Izbor vakcine</string>
    <string name="astrazeneca">AstraZeneca</string>
    <string name="moderna">Moderna</string>
    <string name="pfizer_biontech">Pfizer-BioNTech</string>
    <string name="sputnik_v">Sputnik V</string>
    <string name="nav_img">nav_img</string>
    <string name="corona_img">corona_img</string>
    <string name="home">go back</string>
    <string name="termin_lokacija">Termin vakcinacije</string>
    <string name="dom_zdravlja_stari_grad">Dom zdravlja Stari Grad</string>
    <string name="alajbegovi_a_1_sarajevo_71000">Alajbegovića 1, Sarajevo 71000</string>
    <string name="_22_5_2021">22.5.2021, 11:30h</string>
    <string name="num_registered">%1$d registrovanih</string>
</resources>